Update stylesheet and script references in HTML

--- a/passwordGenerator.html
+++ b/passwordGenerator.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="passwordGenerator.css">
 </head>
 <body>
     <div class="container">
@@ -62,7 +62,8 @@
 
         </div>
     </div>
-    <script src="/PROJECTS/project.js"></script>
+    <script src="passwordGenerator.js"></script>
     
 </body>
+
 </html>
