--- a/passwordGenerator.html
+++ b/passwordGenerator.html
@@ -16,7 +16,7 @@
                 <input type="text" readonly placeholder="Password" class="display" data-passwordDisplay>
                 <button data-copy class="copyBtn">
                     <span data-copyMsg id="copyMsg"></span>
-                    <img src="/PROJECTS/copy-text-svgrepo-com.svg" alt="copy" width="23" height="23">
+                    <img src="/copy-text-svgrepo-com.svg" alt="copy" width="23" height="23">
                 </button>
             </div>
             
@@ -67,3 +67,4 @@
 </body>
 
 </html>
+
